<resources>
    <string name="app_name">FieldAuditApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log">Login</string>
    <string name="invalid_use">Invalid User ID</string>
    <string name="invalid_pas">Invalid Password</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="proceed">Proceed</string>
    <string name="scan_bus_qr">Scan bus QR to Audit</string>
    <string name="audit_report">Audit report</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="mh_393984">MH 393984</string>
    <string name="current_stop">Current Stop</string>
    <string name="kapilvastu_buddha_vihar">Kapilvastu Buddha Vihar</string>
    <string name="deboard_count">Deboard Count</string>
    <string name="_02">02</string>
    <string name="passenger_count">Passenger Count</string>
    <string name="_17">17</string>
    <string name="start_audit">START AUDIT</string>
    <string name="sans_serif_medium">sans-serif-medium</string>
    <string name="issue_fine_ticket">Issue fine ticket</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="issue_fine">ISSUE FINE</string>
    <string name="end_audit">END AUDIT</string>
    <string name="confirm_your_details">Confirm your details</string>
    <string name="bus">Bus</string>
    <string name="mh7675669">MH7675669</string>
    <string name="route">Route</string>
    <string name="s_849">S-849</string>
    <string name="vashi_junction_andheri_east">Vashi junction - Andheri east</string>
    <string name="manual_count">Manual count</string>
    <string name="_9">9</string>
    <string name="passenger_caught">Passenger caught</string>
    <string name="_6">6</string>
    <string name="fine_collection">Fine collection</string>
    <string name="_4567">₹4567</string>
    <string name="submit">SUBMIT</string>
    <string name="audit_completed_successfully">Audit completed successfully</string>
    <string name="okay">OKAY</string>
    <string name="total_buses">Total Buses</string>
    <string name="_8949">₹8949</string>
    <string name="routes_audited">Routes audited</string>
    <string name="fine_collected">Fine Collected</string>
    <string name="fine_count">Fine Count</string>
    <string name="_171101">171101</string>
    <string name="_0">0</string>
    <string name="audit_details">Audit details</string>
    <string name="dismiss">Dismiss</string>
    <string name="issue_ticket">Issue ticket</string>
    <string name="ticket_amount">Ticket Amount</string>
    <string name="_456">₹456</string>
    <string name="print">PRINT</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">Logout</string>
    <string name="day_summary">Day summary</string>
    <string name="passengers_caught">Passengers caught</string>
    <string name="_23">23</string>
    <string name="_3456">₹3456</string>
    <string name="scan_bus_qr_to_start_audit">Scan bus QR to start audit</string>
    <string name="no_buses_audited_yet">No buses audited yet</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="mh07ab1234">MH07AB1234</string>
    <string name="show_audit_report">Show Audit Report</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="Rs">₹</string>
    <string name="confirm_fine">Confirm Fine</string>
    <string name="fine_amount">Fine Amount</string>
    <string name="audit_report2">Audit Report</string>
    <string name="failed_to_load_bus_details">Failed to load bus details</string>
    <string name="please_try_again">Please try again</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="please_check_your_network_and_try_again">Please check your network and try again</string>
    <string name="_3_000">₹3,000</string>
    <string name="view_audit_reports">VIEW AUDIT REPORTS</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="test_crash">Test Crash</string>
    <string name="loading">Loading..</string>
    <string name="test_crash_login">Test Crash login</string>
    <string name="confirm_vehicle_details">Confirm Vehicle Details</string>
    <string name="audit_passengers">Audit Passengers</string>
    <string name="passengers_in_the_bus">Passengers in the bus :</string>
    <string name="view_audit_report">View Audit Report</string>
</resources>