<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/audit_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="26dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bus"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/busTV2a"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mh7675669"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="41dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/route"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busTV2a" />

    <TextView
        android:id="@+id/routeTV2a"
        android:layout_width="47dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/s_849"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/stopTV2a"
        android:layout_width="250dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/vashi_junction_andheri_east"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/routeTV2a" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="95dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/manual_count"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopTV2a" />

    <TextView
        android:id="@+id/passengerTV2a"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_9"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="123dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/passenger_caught"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerTV2a" />


    <TextView
        android:id="@+id/fineCountTV2a"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/_6"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="99dp"
        android:layout_height="19dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/fine_collection"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fineCountTV2a" />

    <TextView
        android:id="@+id/fineTV2a"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/_4567"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dimissAudit"
        android:layout_width="328dp"
        android:layout_height="42dp"
        android:layout_marginTop="52dp"
        android:text="@string/dismiss"
        android:textSize="14sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rectangle_6_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fineTV2a" />


</androidx.constraintlayout.widget.ConstraintLayout>